<resources>
    <string name="app_name" translatable="false">My Application</string>
    <string name="button_start">START</string>
    <string name="description_image_button_1">карты</string>
    <string name="description_image_button_2">заметки</string>
    <string name="image_description">козы пингвины</string>
    <string name="hint_title">Заголовок</string>
    <string name="hint_content">Содержание</string>
    <string name="add_note_text">Добавить заметку</string>
    <string name="back_button_desc">Кнопка назад</string>
    <string name="recycler_view_desc">Список заметок</string>
    <string name="delete_note_desc">Удалить заметку</string>
    <string name="delete_confirmation">Удалить эту заметку?</string>
    <string name="delete">Удалить</string>
    <string name="cancel">Отмена</string>
    <string name="next_animal">След. зверуха</string>
    <string name="previous_animal">Прош. зверуха</string>
</resources>
