<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:ignore="ExtraText">

    <!-- Верхняя половина экрана (белая) -->
    <View
        android:id="@+id/whiteBackground"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/white_t"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/blueBackground" />

    <!-- Нижняя половина экрана (голубая) -->
    <!-- Устанавливаем высоту в 50% экрана -->

    <!-- Линия резделитель -->
    <View
        android:id="@+id/blueBackground"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.5"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/whiteBackground" />

    <View
        android:id="@+id/line"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:background="@color/back"
        tools:layout_editor_absoluteY="205dp"
        tools:ignore="MissingConstraints" />

    <!-- Кнопка -->
    <ImageButton
        android:id="@+id/button"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/button_start"
        android:padding="3dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="@+id/blueBackground"
        app:layout_constraintEnd_toEndOf="@+id/line"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5"
        app:srcCompat="@drawable/start" />

    <!-- Кнопка для карты -->
    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/circle_button"
        android:scaleType="centerInside"
        android:padding="16dp"
        android:contentDescription="@string/description_image_button_1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/img_1" />

    <ImageButton
        android:id="@+id/notesButton"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/circle_button"
        android:contentDescription="@string/description_image_button_2"
        android:padding="16dp"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toEndOf="@+id/button"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/img_2" />

    <TextView
        android:id="@+id/jokeTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:textAlignment="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>